# gphoto

./: LICENSE  README.md  pyproject.toml
gphoto/: main.py
